[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Objects/Player/fox-run-ver-3-color.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Objects/Player/fox-anims-idle-less-untz-COLOR.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Effects/Landing1.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/New Effects/dash_heavy.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.94987, 10.5008 )

[sub_resource type="Animation" id=15]
resource_name = "FoxIdle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Basic:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Basic:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Basic:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Basic:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Basic:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, -36 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("playerAni:playback_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.85
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Basic:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 4, 6, 8, 10, 12, 14, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Basic:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.615572 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Basic:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Basic:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Basic:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Basic:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, -12 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("playerAni:playback_speed")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "kiss"

[node name="Player" type="Node2D"]
position = Vector2( 9.26584, 0.487671 )

[node name="Body" type="KinematicBody2D" parent="." groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Basic" type="Sprite" parent="Body"]
position = Vector2( -7, -12 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )
vframes = 4
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -4.84282, 2.32453 )
scale = Vector2( 3.87247, 1.81915 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
playback_speed = 2.0
anims/FoxIdle = SubResource( 15 )
anims/FoxRun = SubResource( 16 )
anims/kiss = SubResource( 17 )

[node name="jumpsound1" type="AudioStreamPlayer" parent="Body"]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="DeathTimer" type="Timer" parent="Body"]
wait_time = 0.5
one_shot = true

[node name="DashSound" type="AudioStreamPlayer" parent="Body"]
stream = ExtResource( 5 )
volume_db = -5.0

[connection signal="animation_finished" from="Body/AnimationPlayer" to="Body" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Body/DeathTimer" to="Body" method="_on_DeathTimer_timeout"]
